--- a/Practico_IAA.ipynb
+++ b/Practico_IAA.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -435,7 +435,7 @@
        "[10504 rows x 46 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,14 +465,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "tQ89yxpfSDDN"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PAC_3</th>\n",
+       "      <th>FAS_CON_P</th>\n",
+       "      <th>FAS_CON_S</th>\n",
+       "      <th>FAS_CON_T</th>\n",
+       "      <th>SIT_ATIV</th>\n",
+       "      <th>TIP_UNID</th>\n",
+       "      <th>POS</th>\n",
+       "      <th>ATRB_PER</th>\n",
+       "      <th>TEN_LIN_SE</th>\n",
+       "      <th>CAP_ELO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>n_close_con</th>\n",
+       "      <th>is_urb</th>\n",
+       "      <th>closest_trd_i</th>\n",
+       "      <th>closest_trd_dist</th>\n",
+       "      <th>NODE</th>\n",
+       "      <th>ENDNODE</th>\n",
+       "      <th>g_degree</th>\n",
+       "      <th>g_avg_ndeg</th>\n",
+       "      <th>g_pagerank</th>\n",
+       "      <th>dist_to_trs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>05H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2054</td>\n",
+       "      <td>182.473575</td>\n",
+       "      <td>45297</td>\n",
+       "      <td>44304</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>8170.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>05H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4111</td>\n",
+       "      <td>668.681912</td>\n",
+       "      <td>45268</td>\n",
+       "      <td>44304</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>10274.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>O</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>5H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>195</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6269</td>\n",
+       "      <td>35.663825</td>\n",
+       "      <td>60002</td>\n",
+       "      <td>48689</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>1090.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ET4_1040035</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>AN</td>\n",
+       "      <td>BN</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8962</td>\n",
+       "      <td>191.940500</td>\n",
+       "      <td>46283</td>\n",
+       "      <td>44304</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>15507.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>2H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5214</td>\n",
+       "      <td>58.166348</td>\n",
+       "      <td>14826</td>\n",
+       "      <td>17749</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>29516.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10499</th>\n",
+       "      <td>ET14_1141247</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>AN</td>\n",
+       "      <td>BN</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>05H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8633</td>\n",
+       "      <td>384.548354</td>\n",
+       "      <td>680022</td>\n",
+       "      <td>17749</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>35574.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10500</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>2H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5013</td>\n",
+       "      <td>112.433295</td>\n",
+       "      <td>680043</td>\n",
+       "      <td>71128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>10719.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10501</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9354</td>\n",
+       "      <td>182.742433</td>\n",
+       "      <td>680068</td>\n",
+       "      <td>118082</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>18159.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10502</th>\n",
+       "      <td>ET9_2090010</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>AN</td>\n",
+       "      <td>BN</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>O</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>05H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4543</td>\n",
+       "      <td>341.431358</td>\n",
+       "      <td>677569</td>\n",
+       "      <td>68429</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>22236.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10503</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>ABCN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>38</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1H</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>False</td>\n",
+       "      <td>476</td>\n",
+       "      <td>126.479225</td>\n",
+       "      <td>13854</td>\n",
+       "      <td>13867</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>1143.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10504 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              PAC_3 FAS_CON_P FAS_CON_S FAS_CON_T SIT_ATIV  TIP_UNID POS  \\\n",
+       "0                 0       ABC      ABCN         0       AT        38  PD   \n",
+       "1                 0       ABC      ABCN         0       AT        38  PD   \n",
+       "2                 0       ABC      ABCN         0       AT        38   O   \n",
+       "3       ET4_1040035        AB        AN        BN       AT        38  PD   \n",
+       "4                 0       ABC      ABCN         0       AT        38  PD   \n",
+       "...             ...       ...       ...       ...      ...       ...  ..   \n",
+       "10499  ET14_1141247        AB        AN        BN       AT        38  PD   \n",
+       "10500             0       ABC      ABCN         0       AT        38  PD   \n",
+       "10501             0       ABC      ABCN         0       AT        38  PD   \n",
+       "10502   ET9_2090010        AB        AN        BN       AT        38   O   \n",
+       "10503             0       ABC      ABCN         0       AT        38  PD   \n",
+       "\n",
+       "       ATRB_PER  TEN_LIN_SE CAP_ELO  ...  n_close_con  is_urb  closest_trd_i  \\\n",
+       "0             1        0.22     05H  ...            1   False           2054   \n",
+       "1             1        0.22     05H  ...            1   False           4111   \n",
+       "2             2        0.38      5H  ...          195    True           6269   \n",
+       "3             1        0.23      1H  ...           14   False           8962   \n",
+       "4             1        0.38      2H  ...            4   False           5214   \n",
+       "...         ...         ...     ...  ...          ...     ...            ...   \n",
+       "10499         1        0.44     05H  ...            1   False           8633   \n",
+       "10500         1        0.22      2H  ...            4   False           5013   \n",
+       "10501         1        0.22      1H  ...            1   False           9354   \n",
+       "10502         1        0.23     05H  ...            1   False           4543   \n",
+       "10503         1        0.22      1H  ...           35   False            476   \n",
+       "\n",
+       "       closest_trd_dist    NODE ENDNODE g_degree g_avg_ndeg g_pagerank  \\\n",
+       "0            182.473575   45297   44304        2        2.0   0.000012   \n",
+       "1            668.681912   45268   44304        1        2.0   0.000007   \n",
+       "2             35.663825   60002   48689        1        3.0   0.000006   \n",
+       "3            191.940500   46283   44304        2        2.0   0.000012   \n",
+       "4             58.166348   14826   17749        2        2.5   0.000011   \n",
+       "...                 ...     ...     ...      ...        ...        ...   \n",
+       "10499        384.548354  680022   17749        1        2.0   0.000007   \n",
+       "10500        112.433295  680043   71128        1        2.0   0.000007   \n",
+       "10501        182.742433  680068  118082        1        2.0   0.000007   \n",
+       "10502        341.431358  677569   68429        1        3.0   0.000006   \n",
+       "10503        126.479225   13854   13867        2        2.0   0.000012   \n",
+       "\n",
+       "       dist_to_trs  \n",
+       "0          8170.23  \n",
+       "1         10274.81  \n",
+       "2          1090.47  \n",
+       "3         15507.34  \n",
+       "4         29516.52  \n",
+       "...            ...  \n",
+       "10499     35574.06  \n",
+       "10500     10719.20  \n",
+       "10501     18159.75  \n",
+       "10502     22236.72  \n",
+       "10503      1143.98  \n",
+       "\n",
+       "[10504 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Elimino índices, IDs y variables compuestas.\n",
+    "dataframe = dataframe.drop(columns=['COD_ID', 'PAC_1', 'PAC_2', 'geometry'])\n",
+    "\n",
+    "# Elimino las siguientes variables dado que:\n",
+    "# DIST == 46 para todas las filas,\n",
+    "# CONF == 'RA' para todas las filas excepto una,\n",
+    "# POSTO == 'PT' para todas las filas,\n",
+    "# BANC == 0 para todas la filas,\n",
+    "# MRT == 0 para todas la filas,\n",
+    "# DESCR = '' para todas las filas,\n",
+    "# eu_dis_trs = -1 para todas las filas.\n",
+    "dataframe = dataframe.drop(columns=['DIST', 'CONF', 'POSTO', 'BANC', 'MRT', 'DESCR', 'eu_dis_trs'])\n",
+    "\n",
+    "# Con respecto a otras variables:\n",
+    "# DAT_CON es una fecha. Nos sirve?\n",
+    "# Qué es NODE? No me acuerdo...\n",
+    "dataframe"
+   ]
   },
   {
    "cell_type": "markdown",
