--- a/Practico_IAA.ipynb
+++ b/Practico_IAA.ipynb
@@ -953,9 +953,13 @@
    "outputs": [],
    "source": [
     "def transform_data(dataframe):\n",
+    "    \"\"\"\n",
+    "    Transformar dataframe convirtiendo variables no numéricas en numéricas.\n",
+    "    \"\"\"\n",
+    "\n",
     "    new_dataframe = dataframe.copy()\n",
     "    \n",
-    "    # Convertir CAP_ELO en una columna entera:\n",
+    "    # Convertir CAP_ELO en una columna entera.\n",
     "    new_dataframe.CAP_ELO = new_dataframe.CAP_ELO.replace({\n",
     "        '05H': '50', '1H': '100', '2H': '200', '3H': '300', '5H': '500',\n",
     "        '6K': '6000', '10K': '10000', '15K': '15000'\n",
@@ -1961,7 +1965,7 @@
     "display_markdown('**Top 10 most important variables**:')\n",
     "display_markdown(\n",
     "    '| Column index | Variable name | Score |\\n' +\n",
-    "    '| -------------- | ------------- | ----- |\\n' +\n",
+    "    '| ------------ | ------------- | ----- |\\n' +\n",
     "    '\\n'.join(\n",
     "        f'| {col_index} | {col_name} | {score:.2f} |'\n",
     "        for col_index, col_name, score in col_scores[:10]\n",
@@ -2436,7 +2440,7 @@
     "display_markdown('**Top 10 most important variables**:')\n",
     "display_markdown(\n",
     "    '| Column index | Variable name | Score |\\n' +\n",
-    "    '| -------------- | ------------- | ----- |\\n' +\n",
+    "    '| ------------ | ------------- | ----- |\\n' +\n",
     "    '\\n'.join(\n",
     "        f'| {col_index} | {col_name} | {score:.2f} |'\n",
     "        for col_index, col_name, score in col_scores[:10]\n",
@@ -2484,15 +2488,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_5rj2HADmQjg"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Sin dudas saber cómo transformar los datos antes del entrenamiento mejora los resultados. No tenemos que tener miedo de agregar columnas, estos modelos de regresión son rápidos de entrenar.\n",
+    "* Al usar un modelo de regresión lineal básico de Scikit Learn hay que tener cuidado cuando se escalan los datos; usar un método u otro puede conducir a resultados muy distintos. Sin embargo, el regresor de XGBoost parece no tener este problema, sin mencionar que los resultados obtenidos fueron mucho mejores."
+   ]
   }
  ],
  "metadata": {
